# afb-cmake-modules

./: .gitignore  .gitreview  CMakeAfbTemplates.cmake  CMakeLists.txt  README.md  book.json  cmake_afb_templates.pc.in  install.sh
autobuild/agl/: autobuild.in  autobuild.mk
autobuild/linux/: autobuild  autobuild.in  autobuild.mk
cmake/: common.cmake  config.cmake.sample  configure_file.cmake  macros.cmake  variables.cmake
cmake/cmake.d/: 01-build_options.cmake  01-macros.cmake  01-variables.cmake  02-macros.cmake  02-variables.cmake  03-extra_targets.cmake  03-macros.cmake  04-build_options.cmake  04-extra_targets.cmake
deb/: deb-config.dsc.in  debian.control.in  debian.rules.in
default/cmake/: common.cmake  config.cmake.sample  macros.cmake
default/rpm/: config.spec.in
docs/: devguides-book.yml
docs/dev_guide/: 0_Abstract.md  1-installing-cmake.md  1_Quickstart.md  2_project_architecture.md  3-project-architecture.md  3_advanced_usage.md  4_advanced_customization.md  5_autobuild.md  advanced-customization.md  advanced-usage.md  autobuild.md  cmake-overview.md  configuring-cmake.md  installing-cmake.md  project-architecture.md  using-cmake.md
docs/samples.d/: CMakeLists.txt.sample  config.cmake.sample
examples/html5/: CMakeLists.txt
examples/html5/app/: CMakeLists.txt
examples/html5/etc/: config.cmake
examples/hybrid-html5/: CMakeLists.txt
examples/hybrid-html5/app/: CMakeLists.txt  gulpfile.js
examples/hybrid-html5/binding/: CMakeLists.txt
examples/hybrid-html5/etc/: config.cmake
examples/hybrid-qml/: CMakeLists.txt
examples/hybrid-qml/etc/: config.cmake  macros.cmake
examples/native/: CMakeLists.txt
examples/qml/: CMakeLists.txt
examples/qml/etc/: config.cmake  macros.cmake
examples/service/: CMakeLists.txt
examples/service/etc/: config.cmake
gdb/: gdb-on-target.ini.in
packaging/deb/: agl-cmake-apps-module.dsc  debian.agl-cmake-apps-module-bin.install  debian.changelog  debian.control  rp-cmake-apps-module.dsc
packaging/rpm/: agl-cmake-apps-module.spec  rp-cmake-apps-module.spec
reference/etc/: config.cmake  macros.cmake
rpm/: rpm-config.spec.in
samples.d/: config.cmake.sample
src/cmake/: common.cmake
src/cmake/cmake.d/: 00-colors.cmake  00-setup.cmake  01-build_options.cmake  01-x-build_options.cmake  01-x-efence.cmake  01-x-pkg_config.cmake  02-variables.cmake  02-x-kernel.cmake  02-x-linter.cmake  02-x-version.cmake  03-macros.cmake  03-x-add_input_files.cmake  03-x-defstr.cmake  03-x-geninfo.cmake  03-x-prevent_in_source_build.cmake  03-x-remote_targets_populate.cmake  03-x-set_install_prefix.cmake  03-x-set_openapi_filename.cmake  04-extra_targets.cmake
src/samples.d/: config.cmake.sample
src/template.d/: debian.rules.in  gdb-on-target.ini.in  manifest.yml.in  rpm-config.spec.in  start-on-target.sh.in  xds-project-target.conf.in
src/template.d/autobuild/linux/: autobuild.in
src/template.d/autobuild/rp/: autobuild.in
src/template.d/test/: CMakeLists.txt.in
src/template.d/test/afb-test/: CMakeLists.txt.in
src/template.d/test/afb-test/etc/: CMakeLists.txt.in  aft-agl-helloworld.json.in
src/template.d/test/afb-test/fixtures/: CMakeLists.txt.in  mapi_helloworld.lua.in
src/template.d/test/afb-test/tests/: CMakeLists.txt.in  helloworld.lua.in  mapi_tests.lua.in
src/test-wgt/: launcher.sh.in  test-config.xml.in  test-manifest.yml.in
ssh/: start-on-target.in
template/etc/: config.cmake  macros.cmake
templates/html5/: CMakeLists.txt
templates/html5/app/: CMakeLists.txt  package.json
templates/html5/etc/: config.cmake  macros.cmake
templates/html5/packaging/wgt/: config.xml.in
templates/hybrid-html5/: CMakeLists.txt
templates/hybrid-html5/app/: CMakeLists.txt
templates/hybrid-html5/binding/: CMakeLists.txt  xxx-cb.c  xxx-hat.c  xxx-hat.h
templates/hybrid-html5/etc/: config.cmake  macros.cmake
templates/hybrid-html5/packaging/wgt/: config.xml.in
templates/native/: CMakeLists.txt
templates/native/app/: CMakeLists.txt
templates/native/etc/: config.cmake
templates/native/packaging/wgt/: config.xml.in
templates/service/: AGLbuild  CMakeLists.txt
templates/service/binding/: CMakeLists.txt  xxx-service-cb.c  xxx-service-hat.c  xxx-service-hat.h
templates/service/etc/: config.cmake
test-wgt/: launcher.sh.in
test-widget/: launcher.sh.in  test-config.xml.in
wgt/: config.xml.in  config.xml.in.sample
